# Max-Net

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  cmake_install.cmake  re_cmake  re_cmake.bat
cmake/: cxx17.cmake  ohlib.cmake  version_tag.cmake
docs/: websocketclient.maxref.xml
help/: websockets.hello-world.maxhelp
lib/checked_ptr/: .gitignore  CMakeLists.txt
lib/checked_ptr/include/: checked_ptr.h
lib/optional_locks/: CMakeLists.txt
lib/optional_locks/include/: optional_locks.h
source/: test.cpp
source/iiwa_joints/: CMakeLists.txt  iiwa_joints.cpp
source/iiwa_move/: CMakeLists.txt  iiwa_move.cpp
source/projects/shared/: connection.h  multi_resolver.h  net_url.h  ohlano.h  ohlano_min.h  proto_message_base.h  write_queue.h
source/projects/shared/devices/: devices.h  multi_resolver.h  protobuf_decoder.h  protobuf_decoder_worker.h  protobuf_manager.h  write_queue.h
source/projects/shared/messages/: generic_max_message.h  proto_message_wrapper.h  string_message.h
source/projects/shared/proto/: generic_max.proto  iiwaPosition.proto
source/projects/websocketclient/: BeastSession.cpp  BeastSession.h  CMakeLists.txt  WebSocketClientSession.cpp  WebSocketClientSession.h  WebSocketUrl.h  connection.h  iiwaPosition.pb.cc  iiwaPosition.pb.h  websocketclient.cpp
source/shared/: CMakeLists.txt  client.h  connection.h  io_object_base.h  min_utils.h  net_url.h  ohlano.h  ohlano_min.h  types.h
source/shared/devices/: devices.h  listener.h  multi_resolver.h  outlet_output_adapter.h  protobuf_decoder.h  protobuf_decoder_worker.h  stats.h  write_queue.h
source/shared/example/: CMakeLists.txt  ioapp.cpp  timer.cpp
source/shared/include/: client.h  connection.h  io_application.h  io_object_base.h  min_utils.h  net_url.h  o.h  ohlano.h  ohlano_min.h  server.h  server_base.h  session.h  session_query_macros.h  types.h
source/shared/include/devices/: devices.h  listener.h  multi_acceptor.h  multi_resolver.h  outlet_output_adapter.h  protobuf_decoder.h  protobuf_decoder_worker.h  stats.h  write_queue.h
source/shared/include/messages/: bytes_message.h  generic_max_message.h  iiwa_message.h  json_message.h  string_message.h
source/shared/include/o/: io.h  net.h  types.h
source/shared/include/o/io/: io_app_base.h  io_signals.h  messages.h  net.h  sin_listener.h  thread_pool.h  timer.h
source/shared/include/o/io/messages/: bytes_message.h  string_message.h
source/shared/include/o/io/net/: server_base.h  udp_device.h  udp_receiver.h
source/shared/include/o/messages/: bytes_message.h  json_message.h  string_message.h
source/shared/include/o/net/: server_base.h  udp_receiver.h
source/shared/messages/: bytes_message.h  generic_max_message.h  iiwa_message.h  json_message.h  proto_message_base.h  proto_message_wrapper.h  string_message.h
source/shared/proto/: CMakeLists.txt  Movement.proto  globals.proto  iiwaOutput.proto
source/shared/proto/proto_messages/: generic_max_message.h  iiwa_message.h  proto_message_base.h  proto_message_wrapper.h
source/websocketclient/: CMakeLists.txt  websocketclient.cpp
source/websocketclient_iiwa/: CMakeLists.txt  websocketclient_iiwa.cpp
source/websocketserver/: CMakeLists.txt  websocketserver.cpp
testserver/: index.js  package-lock.json  package.json
